kubernetes/main/apps/home/emqx/app/httproute.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: emqx
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/appName: "EMQX"
    hajimari.io/icon: simple-icons:eclipsemosquitto
    hajimari.io/group: "home automation"
    hajimari.io/instance: "admin"
spec:
  hostnames:
    - "emqx.${SECRET_DOMAIN}"
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: emqx-headless
          namespace: home
          port: 18083
