kubernetes/main/apps/home/emqx/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: egress-emqx
spec:
  endpointSelector:
    matchLabels:
      policy.lovenet/egress-emqx: "true"
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: home
            app.kubernetes.io/name: emqx

---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: emqx
  namespace: home
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: emqx
  ingress:
    - fromEndpoints:
        - matchLabels:
            policy.lovenet/egress-emqx: "true"
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists
        - matchLabels:
            io.kubernetes.pod.namespace: home
            app.kubernetes.io/name: hajimari
        - matchLabels:
            io.kubernetes.pod.namespace: network
            app.kubernetes.io/name: ingress-nginx
